Made only runmode as headless.