@@ -5,13 +5,13 @@ import com.microsoft.playwright.BrowserType;
 import com.microsoft.playwright.Playwright;
 import io.swaglabs.portal.qa.constants.WebPortalConstants;
 
-import java.util.List;
+import java.util.Collections;
 
 public class WebkitBrowser implements IBrowser {
     @Override
-    public BrowserContext createSession(Playwright playwright, boolean isHeadless) {
+    public BrowserContext createSession(Playwright playwright) {
         return playwright.webkit().launch(new BrowserType.LaunchOptions()
-                        .setHeadless(isHeadless)
-                        .setArgs(List.of(WebPortalConstants.MAXIMIZE_WINDOW))).newContext();
+                .setHeadless(true)
+                .setArgs(Collections.singletonList(WebPortalConstants.MAXIMIZE_WINDOW))).newContext();
     }
 }
